fix(header): bad alignment

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,3 +1,10 @@
+div {
+  display: flex;
+  align-items: center;
+  gap: 6rem;
+  height: 4.0625rem;
+}
+
 #logo {
 	padding: 0.5rem 0 0 0.5rem;
 	display: flex;
